--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="snap-section hero">
       <h1>Welcome to Gourmet Bliss</h1>
       <p>Where taste meets perfection.</p>
-      <img src="hero-image.jpg" alt="Restaurant Hero Image">
+      <img src="https://source.unsplash.com/random/800x600?restaurant" alt="Restaurant Hero Image">
     </section>
 
     <!-- Calendar Section -->
