--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       sections.forEach(section => {
         const sectionElement = document.createElement('section');
         sectionElement.className = 'snap-section';
+        sectionElement.style.backgroundImage = `url(${section.bg_image})`;
         sectionElement.innerHTML = `
           <h2>${section.section_name}</h2>
           <p>${section.section_content}</p>
